# learning-opencv

./: .gitignore  CMakeLists.txt  helloimg.cpp  hellovid.cpp
